# matrix

matrix/matrix-android/: build.gradle  readme.txt  settings.gradle
matrix/matrix-android/gradle/wrapper/: gradle-wrapper.properties
matrix/matrix-android/matrix-android-lib/src/main/java/com/tencent/matrix/: AppActiveMatrixDelegate.java
matrix/matrix-android/matrix-android-lib/src/main/java/com/tencent/matrix/report/: FilePublisher.java  IssuePublisher.java
matrix/matrix-android/matrix-apk-canary/: build.gradle
matrix/matrix-android/matrix-apk-canary/src/: apk-checker-config.json
matrix/matrix-android/matrix-commons/src/main/java/com/android/dexdeps/: DexData.java
matrix/matrix-android/matrix-gradle-plugin/: build.gradle
matrix/matrix-android/matrix-io-canary/: CMakeLists.txt
matrix/matrix-android/matrix-io-canary/src/main/cpp/: io_canary_jni.cc
matrix/matrix-android/matrix-io-canary/src/main/cpp/comm/: io_canary_utils.cc
matrix/matrix-android/matrix-io-canary/src/main/cpp/core/: io_canary.cc  io_info_collector.cc
matrix/matrix-android/matrix-io-canary/src/main/cpp/detector/: detector.cc  main_thread_detector.cc  repeat_read_detector.cc  small_buffer_detector.cc
matrix/matrix-android/matrix-io-canary/src/main/java/com/tencent/matrix/iocanary/core/: IOCanaryCore.java  IOCanaryJniBridge.java
matrix/matrix-android/matrix-io-canary/src/main/java/com/tencent/matrix/iocanary/detect/: CloseGuardHooker.java  IOCloseLeakDetector.java  MatrixCloseGuard.java
matrix/matrix-android/matrix-sqlite-lint/matrix-sqlite-lint-android-sdk/src/full/cpp/: com_tencent_sqlitelint_SqliteLint.cc  loader.h
matrix/matrix-android/matrix-sqlite-lint/src/core/: lint.cc  lint_manager.cc
matrix/matrix-android/resapk/: CMakeLists.txt  build.gradle
matrix/matrix-android/resapk/src/androidTest/java/com/example/resapk/: ExampleInstrumentedTest.java
matrix/matrix-android/resapk/src/main/: AndroidManifest.xml
matrix/matrix-android/resapk/src/main/cpp/: threadid.cpp
matrix/matrix-android/resapk/src/main/java/com/example/resapk/: Jni.java  MainActivity.java  Pkg.java  StaticCall.java
matrix/matrix-android/resapk/src/main/res/layout/: activity_main.xml
matrix/matrix-android/resapk/src/main/res/values/: attrs.xml  strings.xml  styles.xml
matrix/matrix-android/resapk/src/test/java/com/example/resapk/: ExampleUnitTest.java
matrix/matrix-android/sample/: build.gradle
matrix/matrix-android/sample/src/main/java/com/example/sample/: MainActivity.java
matrix/matrix-android/sample/src/main/res/layout/: activity_main.xml  activity_old_main.xml
matrix/matrix-android/sample/src/main/res/values/: strings.xml  styles.xml
samples/sample-android/: local.properties
samples/sample-android/app/: build.gradle
samples/sample-android/app/src/main/res/layout/: item_issue_list.xml
(+65 files in other folders)
